<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#CADE3B"
    tools:context=".HomeScreen">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/animatedtext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:textSize="50sp"
        android:textStyle="bold|italic"
        android:gravity="center"
        android:textColor="#212121"
        android:text="@string/welcome_to_scansmart" />

    <Button
        android:id="@+id/scanbtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:backgroundTint="#006064"
        android:text="@string/scan" />

    <Button
        android:id="@+id/generatebtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:backgroundTint="#006064"
        android:text="@string/generate" />

    <Button
        android:id="@+id/feebackbtn"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:layout_gravity="center"
        android:backgroundTint="#1A237E"
        android:text="@string/send_feedback" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"
        android:text="@string/made_with_by_laksh_arora"
        android:textColor="#F20707"/>
</LinearLayout>