<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#CADE3B"
    tools:context=".Generate">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="100dp"
        android:textColorHint="@color/black"
        android:hint="@string/enter_text_to_encode">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/encodetext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#EDE8E8"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/genbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:backgroundTint="#006064"
        android:text="@string/generate" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/qrimage"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:padding="8dp" />

        <ImageView
            android:id="@+id/barcodeimage"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:padding="8dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/saveqr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:backgroundTint="#1A237E"
            android:text="@string/save_to_gallery" />

        <Button
            android:id="@+id/savebarcode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:backgroundTint="#1A237E"
            android:text="@string/save_to_gallery" />

    </LinearLayout>


</LinearLayout>